--- a/tex/2024/2/11.tex
+++ b/tex/2024/2/11.tex
@@ -1,2 +1,104 @@
 \Question{\currfilebase}
-\WorkInProgress
+\begin{enumerate}
+    \item Notice that
+          \[
+              x^{\frac{1}{x}} = \exp \left(\frac{\ln x}{x}\right).
+          \]
+
+          As \(x \to 0^{+}\), \(\frac{\ln x}{x} \to -\infty\), and hence \(x^{\frac{1}{x}} \to 0^{+}\).
+
+          As \(x \to \infty\), \(\frac{\ln x}{x} \to 0^{+}\), and hence \(x^{\frac{1}{x}} \to 1\).
+
+          We have
+          \begin{align*}
+              \DiffFrac{y}{x} & = \DiffOp{x} \exp \left(\frac{\ln x}{x}\right)                          \\
+                              & = x^{\frac{1}{x}} \cdot \DiffOp{x} \frac{\ln x}{x}                      \\
+                              & = x^{\frac{1}{x}} \cdot \frac{\frac{1}{x} \cdot x - \ln x \cdot 1}{x^2} \\
+                              & = x^{\frac{1}{x}} \cdot \frac{1 - \ln x}{x^2}.
+          \end{align*}
+
+          This shows that \(\DiffFrac{y}{x} < 0\) when \(x > e\), \(= 0\) when \(x = e\), and \(> 0\) when \(x < e\).
+
+          This means that the point \(\left(e, e^{\frac{1}{e}}\right)\) is a maximum for the graph.
+
+          Hence, the graph looks as follows.
+
+          \begin{center}
+              \input{\currfiledir 11-diag}
+          \end{center}
+
+          The maximum of \(n^{\frac{1}{n}}\) must occur for \(n \in \NN\) when \(n = 2\) or \(n = 3\), since \(2 < e < 3\).
+
+          Notice that
+          \begin{align*}
+              2^{\frac{1}{2}} < 3^{\frac{1}{3}} & \iff 2^{3} < 3^{2} \\
+                                                & \iff 8 < 9,
+          \end{align*}
+          which is true, so the maximum of \(n^{\frac{1}{n}}\) occurs when \(n = 3\).
+
+    \item Let \(X_i\) be the number of tests for each group, and let \(X\) be the total number of tests, we have
+          \[
+              X = \sum_{i = 1}^{r} X_i.
+          \]
+
+          For each \(X_i\), we have if the enzyme is not present in any of the persons, then there is only one test needed. Otherwise, if the enzyme is present in any of the persons, then an additional \(k\) tests are needed. Hence,
+          \[
+              \Expt(X_i) = (1 - p)^k + (1 - (1 - p)^k) (1 + k) = 1 + (1 - p^k) k,
+          \]
+          and the expected total number of tests is given as
+          \begin{align*}
+              \Expt(X) & = \Expt\left(\sum_{i = 1}^{r} X_i\right)              \\
+                       & = \sum_{i = 1}^{r} \Expt\left(X_i\right)              \\
+                       & = \sum_{i = 1}^{r} \left[1 + (1 - (1 - p)^k) k\right] \\
+                       & = r \left[1 + (1 - (1 - p)^k) k\right]                \\
+                       & = \frac{N}{k} \left[1 + (1 - (1 - p)^k) k\right]      \\
+                       & = N \left(\frac{1}{k} + 1 - (1 - p)^k\right).
+          \end{align*}
+
+    \item The expected number of tests is at most \(N\) is the equation
+          \begin{align*}
+              N \left(\frac{1}{k} + 1 - (1 - p)^k\right) & \leq N                \\
+              \frac{1}{k} + 1 - (1 - p)^k                & \leq 1                \\
+              \frac{1}{k}                                & \leq (1 - p)^k        \\
+              \left(\frac{1}{k}\right)^{\frac{1}{k}}     & \leq 1 - p            \\
+              \frac{1}{1 - p}                            & \leq k^{\frac{1}{k}}.
+          \end{align*}
+
+          The maximum of \(k^{\frac{1}{k}}\) arises where \(k = 3\), and this is valid since \(k = 3 \divides N\). Hence,
+          \begin{align*}
+              \frac{1}{1 - p} & \leq 3^{\frac{1}{3}}       \\
+              p               & \leq 1 - 3^{-\frac{1}{3}},
+          \end{align*}
+          and hence such largest value of \(p\) is
+          \[
+              p = 1 - 3^{-\frac{1}{3}}.
+          \]
+
+          Notice that
+          \begin{align*}
+              1 - 3^{-\frac{1}{3}} > \frac{1}{4} & \iff \frac{3}{4} > 3^{-\frac{1}{3}}      \\
+                                                 & \iff \left(\frac{3}{4}\right)^3 > 3^{-1} \\
+                                                 & \iff \frac{27}{64} > \frac{1}{3}         \\
+                                                 & \iff 81 > 64,
+          \end{align*}
+          which is true, and so this value of \(p\) is greater than \(\frac{1}{4}\).
+
+    \item We would like to show that if \(pk \ll 1\), then \(1 - (1 - p)^k \approx pk\).
+
+          Notice that
+          \begin{align*}
+              1 - (1 - p)^k & = 1 - \sum_{i = 0}^{k} \binom{k}{i} (-p)^k \\
+                            & = 1 - \left(1 - kp + \cdots\right)         \\
+                            & \approx kp,
+          \end{align*}
+          and hence
+          \[
+              \Expt(X) = N \left(\frac{1}{k} + 1 - (1 - p)^k\right) \approx N \left(\frac{1}{k} + pk\right).
+          \]
+
+          If \(p = 0.01\), \(k = 10\), we have
+          \[
+              \Expt(X) \approx N \left(\frac{1}{10} + 0.01 \cdot 10\right) = N \cdot \frac{2}{10} = \frac{1}{5} N,
+          \]
+          which is \(20\%\) of \(N\).
+\end{enumerate}
