--- a/tex/2024/2/3.tex
+++ b/tex/2024/2/3.tex
@@ -1,2 +1,67 @@
 \Question{\currfilebase}
-\WorkInProgress
+
+\begin{enumerate}
+    \item The line \(NP\) has gradient
+          \[
+              m_{NP} = \frac{\sin \theta - 0}{\cos \theta - (-1)} = \frac{\sin \theta}{\cos \theta + 1},
+          \]
+          and hence it has equation
+          \[
+              l_{NP}: y = \frac{\sin \theta}{\cos \theta + 1} \cdot (x + 1).
+          \]
+
+          When \(x = 0\), we have
+          \begin{align*}
+              q & = \frac{\sin \theta}{\cos \theta + 1}                                                     \\
+                & = \frac{2 \sin \frac{\theta}{2} \cos \frac{\theta}{2}}{2 \cos^2 \frac{\theta}{2} - 1 + 1} \\
+                & = \frac{\sin \frac{\theta}{2}}{\cos \frac{\theta}{2}}                                     \\
+                & = \tan \frac{\theta}{2}.
+          \end{align*}
+
+    \item \begin{enumerate}
+              \item \begin{align*}
+                        \RHS & = \tan \frac{1}{2} \left(\theta + \frac{1}{2} \pi\right)                                          \\
+                             & = \tan \left(\frac{\theta}{2} + \frac{\pi}{4}\right)                                              \\
+                             & = \frac{\tan \frac{\theta}{2} + \tan \frac{\pi}{4}}{1 - \tan \frac{\theta}{2} \tan \frac{\pi}{4}} \\
+                             & = \frac{q + 1}{1 - q}                                                                             \\
+                             & = f_1(q),
+                    \end{align*}
+                    as desired.
+
+              \item Let the coordinates of \(P_1\) be \((\cos \phi, \sin \phi)\), and hence we must have
+                    \begin{align*}
+                        f_1(q)                                                & = \tan \frac{1}{2} \phi    \\
+                        \tan \frac{1}{2} \left(\theta + \frac{1}{2}\pi\right) & = \tan \frac{1}{2} \phi    \\
+                        \phi                                                  & = \theta + \frac{1}{2}\pi,
+                    \end{align*}
+                    and so \(P_1\) is the image of \(P\) being rotated through an angle of \(\pi\) counterclockwise about the origin.
+          \end{enumerate}
+
+    \item \begin{enumerate}
+              \item The coordinates of \(P_2\) are \(\left(\cos\left(\theta + \frac{1}{3}\pi\right), \sin\left(\theta + \frac{1}{3}\pi\right)\right)\), and hence we must have that
+                    \begin{align*}
+                        f_3(q) & = \tan \frac{1}{2} \left(\theta + \frac{1}{3}\pi\right)                                           \\
+                               & = \tan \left(\frac{\theta}{2} + \frac{\pi}{6}\right)                                              \\
+                               & = \frac{\tan \frac{\theta}{2} + \tan \frac{\pi}{6}}{1 - \tan \frac{\theta}{2} \tan \frac{\pi}{6}} \\
+                               & = \frac{q + \frac{1}{\sqrt{3}}}{1 - q \cdot \frac{1}{\sqrt{3}}}                                   \\
+                               & = \frac{1 + \sqrt{3}q}{\sqrt{3} - q}.
+                    \end{align*}
+
+              \item Notice that \(f_3(q) = f_1(-q) = \tan \frac{1}{2} \left(- \theta + \frac{1}{2}\pi\right)\), and so the coordinates of \(P_3\) must be
+                    \[
+                        \left(\cos \left(\frac{1}{2}\pi - \theta\right), \sin \left(\frac{1}{2}\pi - \theta\right)\right),
+                    \]
+                    which is \(P_3 (\sin \theta, \cos \theta)\), a reflection of \(P\) in the line \(y = x\).
+
+              \item \(P_4\) must be the image of \(P\) under the following transformations:
+                    \begin{itemize}
+                        \item Rotation counterclockwise by \(\frac{1}{3}\pi\) about the origin \(O\);
+                        \item Reflection in the line \(y = x\);
+                        \item Rotation clockwise by \(\frac{1}{3}\pi\) about the origin \(O\).
+                    \end{itemize}
+
+                    This is precisely the reflection in which the axis after the second step is \(y = x\). Hence, the axis of this reflection has an angle of \(\frac{1}{4} \pi - \frac{1}{3}\pi = \frac{1}{12}\pi\) with the positive \(x\)-axis.
+
+                    \(P_4\) is the image of \(P\) reflected in the line which makes an angle of \(-\frac{\pi}{12}\) with the positive \(x\)-axis, passing through the origin.
+          \end{enumerate}
+\end{enumerate}
