--- a/tex/progress.tex
+++ b/tex/progress.tex
@@ -57,7 +57,7 @@ Progress: None.
 
 \clearpage
 \section*{Paper II}
-Progress: Finished 2017 and 2018.
+Progress: Finished 2017, 2018 and 2024.
 
 \begin{center}
     \begin{tabular}{c|cccccccccccccccc}
