prepare 2021 step 3 structure.

--- a/tex/progress.tex
+++ b/tex/progress.tex
@@ -107,7 +107,7 @@ Progress: Finished 2017, 2018 and 2024.
 
 \clearpage
 \section*{Paper III}
-Progress: Finished 2010 to 2020.
+Progress: Finished 2010 to 2021.
 
 \begin{center}
     \begin{tabular}{c|cccccccccccccccc}
@@ -148,7 +148,7 @@ Progress: Finished 2010 to 2020.
         2018 & \tick & \tick & \tick & \tick & \tick & \tick & \tick & \tick & Me & Me & Me    & \tick & \tick & N/A & N/A & N/A \\
         2019 & \tick & \tick & \tick & \tick & \tick & \tick & \tick & \tick & Me & Me & \tick & \tick & N/A   & N/A & N/A & N/A \\
         2020 & \tick & \tick & \tick & \tick & \tick & \tick & \tick & \tick & Me & Me & \tick & \tick & N/A   & N/A & N/A & N/A \\
-        2021 &       &       &       &       &       &       &       &       &    &    &       &       & N/A   & N/A & N/A & N/A \\
+        2021 & \tick & \tick & \tick & \tick & \tick & \tick & \tick & \tick & Me & Me & \tick & \tick & N/A   & N/A & N/A & N/A \\
         2022 &       &       &       &       &       &       &       &       &    &    &       &       & N/A   & N/A & N/A & N/A \\
         2023 &       &       &       &       &       &       &       &       &    &    &       &       & N/A   & N/A & N/A & N/A \\
         2024 &       &       &       &       &       &       &       &       &    &    &       &       & N/A   & N/A & N/A & N/A
