--- a/main.tex
+++ b/main.tex
@@ -34,7 +34,7 @@
 \include{\TexPath/2018}
 \include{\TexPath/2019}
 \include{\TexPath/2020}
-% \include{\TexPath/2021}
+\include{\TexPath/2021}
 % \include{\TexPath/2022}
 % \include{\TexPath/2023}
 \include{\TexPath/2024}
