--- a/tex/2016/3/8.tex
+++ b/tex/2016/3/8.tex
@@ -89,7 +89,11 @@
                    & = x                                                                                                 \\
                    & = \RHS,
           \end{align*}
-          so \[g(x) = \frac{2x}{x^2 + 1}\] is the solution to the original functional equation.
+          so
+          \[
+              g(x) = \frac{2x}{x^2 + 1}
+          \]
+          is the solution to the original functional equation.
 
     \item Let \(H(x) = \frac{1}{1 - x}\). Notice that
           \begin{align*}
@@ -135,5 +139,8 @@
                    & = 1 - x - \frac{1}{1 - x}                         \\
                    & = \RHS,
           \end{align*}
-          which satisfies the original functional equation. Therefore, the original equation solves to \[h(x) = \frac{1}{2} - x.\]
+          which satisfies the original functional equation. Therefore, the original equation solves to
+          \[
+              h(x) = \frac{1}{2} - x.
+          \]
 \end{enumerate}
